[package]
name = "chaingraph-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb-lib = { git = "https://github.com/indradb/indradb", features = ["rocksdb-datastore"] }
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
ethers = { version = "1", features = ["ws"] }
crossbeam = "0.8"
rocksdb = "0.19.0"
clap = { version = "4.1.4", features = ["derive"] }
num_cpus = "1.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", version = "0.2.0" }
hashbrown = "0.13.2"
rug = "1.19.1"
bigdecimal = "0.3.0"
async-recursion = "1.0.2"
futures = "0.3.26"

[dependencies.uuid]
version = "1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "v5",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
